kubernetes-monitoring/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-monitoring-service
  labels:
    app: nginx-monitoring
spec:
  type: ClusterIP
  selector:
    app: nginx-monitoring
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
