kubernetes-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-monitoring-service
  labels:
    app: nginx-monitoring
spec:
  type: ClusterIP
  selector:
    app: nginx-monitoring
  ports:
  - port: 80
    name: http
    targetPort: 8888
    protocol: TCP
  - port: 9113
    name: metrics
    targetPort: 9113
    protocol: TCP
