kubernetes-monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-monitoring-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "nginx-monitoring.172.16.18.200.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-monitoring-service
            port:
              number: 80
  - host: "prometheus.172.16.18.200.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
  - host: "grafana.172.16.18.200.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
